Fix newsletter icon positioning on mobile screens

--- a/css/style.less
+++ b/css/style.less
@@ -458,6 +458,11 @@ footer {
         color: @gray-alt-dk;
         transform: scale(1.4);
         margin-right: 24px;
+
+        @media screen and (max-width: @bp-med) {
+            display: block;
+            margin-bottom: 12px;
+        }
     }
 
     .text {
